@@ -1,4 +1,5 @@
 Changelog 2021 Jan 22:
+    -Audio encoding has been migrated to Opus instead of MP3 for lower CPU usage
     -The audio caches are now merged, meaning the bot can queue/play songs considerably faster if they're already cached.
     -The audio cache can now be deleted via the bot owner's DMs
     -Songs with their files deleted will now redownload the file rather than throwing an error
